MFC r312599 (cem): Add remaining ELF compression definitions and structs

PR:		219417

Former-commit-id: 45bd0fb84e5a9e10c8e0ae3da3eefb5da85bf7a6