sys/sys/elf64.h
@@ -786,6 +786,27 @@ name|Elf64_Syminfo
 typedef|;
 end_typedef
 
+begin_typedef
+typedef|typedef
+struct|struct
+block|{
+name|Elf64_Word
+name|ch_type
+decl_stmt|;
+name|Elf64_Word
+name|ch_reserved
+decl_stmt|;
+name|Elf64_Xword
+name|ch_size
+decl_stmt|;
+name|Elf64_Xword
+name|ch_addralign
+decl_stmt|;
+block|}
+name|Elf64_Chdr
+typedef|;
+end_typedef
+
 begin_endif
 endif|#
 directive|endif
